dark mode toggel fixed

--- a/movies.css
+++ b/movies.css
@@ -237,3 +237,13 @@ h2 {
     opacity: 0.9;
     /* background-color: #0056b3; */
 }
+#dark-mode-toggle {
+    background-color: var(--button-background);
+    color: var(--button-text);
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    margin-left: auto;
+}
